# MCF

./: README
mcf/: Makefile  Makefile.in  README  aclocal.m4  bootstrap.sh  clean.sh  compile-supmuc.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
mcf/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
mcf/m4/: fftw.m4  m4_ax_blas.m4
mcf/mcf_config/: ctrl.mcf  io_config.mcf  mcf_restart_physics00000832.mcf  mcf_restart_physics00000835.mcf  physics_config.mcf
mcf/mcf_config_test_SupMuc/: ctrl.mcf  io_config.mcf  job.cmd  physics_config.mcf
mcf/mcf_doc/UML/: Class.dia  Colloid.dia  Control.dia  Error.dia  Flowchart_marching.dia  Flowchart_marching_integrate_Euler.dia  Flowchart_mcf.dia  IO.dia  Kernel.dia  Marching.dia  Particles.dia  Physics.dia  Rhs.dia  StateEquation.dia  Statistic.dia  Technique.dia
mcf/mcf_doc/developer_guide/: bibdata.bib  developer_guide.dvi  developer_guide.ps  developer_guide.tex
mcf/mcf_doc/user_guide/: user_guide.dvi  user_guide.ps  user_guide.tex
mcf/scripts/: angular_momentum.perl  auto_correlation_function.perl  boundary_adapt_t_show_step.perl  boundary_adapt_t_show_step.sh  boundary_average.perl  boundary_average_2D.perl  boundary_average_3D.perl  capitalize.sh  colloid_add_time.perl  colloid_compute_theta_3D.perl  colloid_convert_out_to_dat.perl  colloid_count_neighbors.perl  colloid_drag_average.perl  colloid_local_number_density.perl  colloid_local_number_density_different_runs.perl  colloid_omega_average.perl  colloid_position_cluster_with_output.perl  colloid_rdf_r.perl  colloid_rdf_r_single.perl  colloid_rdf_theta.perl  colloid_rdf_x_y.perl  colloid_torque_average.perl  colloid_translation_average.perl  colloid_xxx_average.perl  colloids_2d.perl  colloids_2d.sh  colloids_2d_sid.perl  colloids_2d_sid.sh  colloids_3d.perl  colloids_3d.sh  colloids_3d_sid.perl  colloids_3d_sid.sh  colloids_local_velocity_average.perl  colloids_local_velocity_average_different_runs.perl  combine_data.perl  conformation_2d.perl  correlation_function_rdf_stress.perl  correlation_function_stress_rdf.perl  couette_theoretical_regular_2d.perl  count_neighbour_particle_2d.perl  (+83 more)
mcf/scripts/mobility/: mobility.F90
mcf/scripts/mobility_far_approach/: resistance.F90
mcf/scripts/msd/: msd.F90
mcf/scripts/packing/2D_previous_run/: convert.perl
mcf/scripts/packing/2D_square/: square.perl
mcf/scripts/packing/2D_square/.svn/: entries
mcf/scripts/packing/2D_staggered/: staggered.perl  staggered_twist.perl
mcf/scripts/packing/3D_Skoge_HardSpheres/: Makefile  box.C  box.h  read_input.C  read_input.h  sphere.C  spheres.C
mcf/scripts/packing/3D_Skoge_HardSpheres/data/: generate_spheres  input
mcf/scripts/packing/3D_Skoge_HardSpheres/src/: box_reflecting.C  sphere.h  vector.h
mcf/scripts/packing/3D_staggered/: staggered.perl
mcf/scripts/packing/hexagonal/: hexagonal.F90
mcf/scripts/pdf/: pdf_colloid.F90  pdf_solvent.F90
mcf/scripts/polar/: test.F90
mcf/scripts/resistance_far_approach/: resistance_JO.F90  resistance_approach.F90
mcf/scripts/resistance_far_shear/: resistance_shear.F90
mcf/scripts/sdpd_poise2D/: v_aver.F90
mcf/scripts/unfold/: unfold.F90  unfold_r.F90
mcf/scripts/vacf/: vacf.F90
mcf/src/: Class_Boundary.F90  Class_Colloid.F90  Class_Control.F90  Class_Debug.F90  Class_IO.F90  Class_Kernel.F90  Class_Marching.F90  Class_Particles.F90  Class_Physics.F90  Class_Random.F90  Class_Rhs.F90  Class_StateEquation.F90  Class_Statistic.F90  Class_Technique.F90  Class_Tool.F90  Makefile  Makefile.am  Makefile.dep  Makefile.flag  Makefile.in  boundary_check_wall_solid_particle.F90  boundary_collect_colloid_interaction.F90  boundary_collect_particles_interaction.F90  boundary_finalize.F90  boundary_get.F90  boundary_new.F90  boundary_noslip_mirror.F90  boundary_noslip_solid.F90  boundary_set.F90  boundary_update_boundary.F90  class_boundary.mod  class_colloid.mod  class_control.mod  class_debug.mod  class_io.mod  class_kernel.mod  class_marching.mod  class_particles.mod  class_physics.mod  class_random.mod  (+258 more)
ppm/work/libppm-1.1.1/src/: Makefile  Makefile.am  Makefile.dep  Makefile.in  fakempi.h  m_fakempi.F90  m_vizing.F90  m_vizing.mod  ppm_alloc_1d.F90  ppm_alloc_1dl.F90  ppm_alloc_2d.F90  ppm_alloc_2dl.F90  ppm_alloc_3d.F90  ppm_alloc_3dl.F90  ppm_alloc_4d.F90  ppm_alloc_4dl.F90  ppm_alloc_5d.F90  ppm_alloc_5dl.F90  ppm_bcdef_le_x.inc  ppm_bcdef_le_y.inc  ppm_bcdef_le_z.inc  ppm_bcdef_neumann_lower_x.inc  ppm_bcdef_neumann_lower_y.inc  ppm_bcdef_neumann_lower_z.inc  ppm_bcdef_neumann_upper_x.inc  ppm_bcdef_neumann_upper_y.inc  ppm_bcdef_neumann_upper_z.inc  ppm_bcdef_periodic_x.inc  ppm_bcdef_periodic_y.inc  ppm_bcdef_periodic_z.inc  ppm_bcdef_symmetry_lower_x.inc  ppm_bcdef_symmetry_upper_y.inc  ppm_bem_basis.F90  ppm_bem_quadrule.F90  ppm_bem_quadrule_npoints.F90  ppm_check_meshid.F90  ppm_check_topoid.F90  ppm_clist_destroy.F90  ppm_comp_pp_cell.F90  ppm_comp_pp_correct.F90  (+462 more)
ppm/work/libppm-1.1.1/test/: Makefile  Makefile.am  Makefile.dep  Makefile.in  TestRunner.F90  mod_unit.F90  mod_unit.mod  ppm_module_get_revision_test.F90  ppm_module_get_revision_test.mod  ppm_module_init_test.F90  ppm_module_init_test.mod  ppm_module_map_part_ghost_test.F90  ppm_module_map_part_ghost_test.mod  ppm_module_mktopo_test.F90  ppm_module_mktopo_test.mod
ppm/work/metis-4.1.1/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
ppm/work/metis-4.1.1/src/: Makefile  Makefile.am  Makefile.in
ppm/work/metis-4.1.1/src/.deps/: balance.Po  bucketsort.Po  ccgraph.Po  coarsen.Po  compress.Po  debug.Po  estmem.Po  fm.Po  fortran.Po  frename.Po  graph.Po  initpart.Po  kmetis.Po  kvmetis.Po  kwayfm.Po  kwayrefine.Po  kwayvolfm.Po  kwayvolrefine.Po  match.Po  mbalance.Po  mbalance2.Po  mcoarsen.Po  memory.Po  (+29 more)
ppm/work/vizing-0.1/: Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
ppm/work/vizing-0.1/src/: Array.h  Boolean.h  Makefile  Makefile.am  Makefile.in  adj.h  color.h  edge.h  graph.h  libvizing.cc  list.h
(+1534 files in other folders)
